--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/joy": "^5.0.0-alpha.77",
     "@mui/material": "^5.12.2",
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
