--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.12.2",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "emoji-picker-react": "^4.4.9",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
